<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<resources>

    <string name="app_name">HairEtcApp</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="submitbutton">Submit</string>
    <string name="datePicked">DATE</string>
    <string name="timePicked">TIME</string>
    <string name="theresa">Theresa</string>
    <string name="sheri">Sheri</string>
    <string name="chrissy">Chrissy</string>
    <string name="stacy">Stacy</string>
    <string name="krista">Krista</string>
    <string name="junae">Junae</string>
    <string name="haircut">Hair Cut</string>
    <string name="color">Color</string>
    <string name="partialColor">Partial Color</string>
    <string name="hilites">Hilites</string>
    <string name="partialHilites">Partial Hilites</string>
    <string name="perm">Perm</string>
    <string name="updo">Updo</string>
    <string name="brazilianBlowout">Brazilian Blowout</string>
    <string name="hairExtensions">Extensions</string>
    <string name="wax">Wax</string>
    <string name="spPromptStylist">Choose Your Stylist</string>
    <string name="enterEmail">Enter Your Email Address</string>
    <string name="enterPassword">Password</string>
    <string name="signIn">Sign In!</string>
    <string name="welcome">WELCOME TO HAIR ETC!</string>
    <string name="localFile">client_email_token</string>
    
    <string-array name="stylists">
        <item>Theresa</item>
        <item>Chrissy</item>
        <item>Stacy</item>
        <item>Sheri</item>
        <item>Krista</item>
        <item>Junae</item>
    </string-array>
        <string name="newAppt">Schedule A New Appointment</string>
        <string name="loggedIn">Welcome!</string>

</resources>
